# azg-tablut-standalone

./: .gitignore  Coach.py  MCTS.py  main.py  pyproject.toml
docs/: project_logs.md  tasks.md
src/tablut/: Arena.py  Args.py  Coach.py  mainTafl.py  pitTafl.py
src/tablut.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tablut/baselines/: Elo_Cal.py  alphabeta_player.py  greedy_player.py  random_player.py
src/tablut/models/: MCTS.py  NNet.py  Players.py  RandomData.py  TaflNNet.py
src/tablut/rules/: TaflGame.py  TaflLogic.py  TaflPlayers.py  test_rules.py
src/tablut/utils/: Digits.py  log.py  utils.py
tafl/: Digits.py  GameVariants.py  TaflLogic.py  mainTafl.py
tafl/pytorch/: NNet.py
