[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "tablut"           # 分发名（pip 安装用）
version = "0.1.0"
requires-python = ">=3.9"
description = "alpha-zero-general to solve Tablut"
readme = "README.md"
dependencies = ["torch>=2.1", "torchvision"]

[tool.setuptools.packages.find]
where = ["src"]             # 告诉 setuptools 在 src 下找包
